change post body content type to json
